--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,9 +8,9 @@
   "LOGIN": "Sign in",
   "SIGNUP": "Sign up",
 
-  "TAB1_TITLE": "Items",
-  "TAB2_TITLE": "Search",
-  "TAB3_TITLE": "Settings",
+  "TAB1_TITLE": "Profile",
+  "TAB2_TITLE": "Found",
+  "TAB3_TITLE": "Lost",
 
   "MAP_TITLE": "Map",
 
