--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,10 +7,9 @@
   "PASSWORD": "Password",
   "LOGIN": "Sign in",
   "SIGNUP": "Sign up",
-
   "TAB1_TITLE": "Profile",
-  "TAB2_TITLE": "Found",
-  "TAB3_TITLE": "Lost",
+  "TAB2_TITLE": "Search",
+  "TAB3_TITLE": "Market",
 
   "MAP_TITLE": "Map",
 
